--- a/src/Resources/EmailjsTemplateReports.html
+++ b/src/Resources/EmailjsTemplateReports.html
@@ -191,7 +191,7 @@
 															<td align="center"
 																style="font-size:0px;padding:10px 25px;word-break:break-word;">
 																<div
-																	style="font-family:Arial, sans-serif;font-size:24px;font-weight:bold;line-height:1;text-align:center;color:#333333;">
+																	style="font-family:Arial, sans-serif;font-size:24px;font-weight:bold;line-height:1;text-align:center;">
 																	<span class="golden-text">Report
 																		#{{numberCase}}-{{incident}}</span>
 																</div>
