Actualizaciones y soluciones a bugs

--- a/src/Resources/EmailjsTemplateRequests.html
+++ b/src/Resources/EmailjsTemplateRequests.html
@@ -213,7 +213,7 @@
                                     ><img
                                       alt
                                       height="500px"
-                                      src="{{requestBanner}}"
+                                      src="https://st.depositphotos.com/1842905/1679/i/450/depositphotos_16792605-stock-photo-warning-sign.jpg"
                                       style="
                                         border: 0;
                                         display: block;
@@ -414,7 +414,7 @@
                                                 height: 60px;
                                                 border-radius: 100%;
                                               "
-                                              src="{{monitorImage}}"
+                                              src="https://cdn1.iconfinder.com/data/icons/user-pictures/101/malecostume-512.png"
                                               alt="Monitor Profile"
                                           /></mj-text>
                                         </td>
